# cognitrace

./: .gitignore  README.md  RESEARCH_BASIS.md  protocol_v1.json  pyproject.toml
src/cognitrace/: __init__.py  envfile.py
src/cognitrace/answer/: export.py  load.py  models.py  qa_head.py
src/cognitrace/baselines/: __init__.py  full_context.py  grep_agent.py  naive_rag.py
src/cognitrace/harness/: adversarial.py  cli.py  datasets.py  protocol.py  reader.py  schema.py
src/cognitrace/retrieval/: budget.py  fusion.py  pipeline.py  pools.py  scorer.py
src/cognitrace/store/: CONTRACTS.md  __init__.py  derive.py  doctor.py  ingest.py  rebuild.py  schema.py
src/cognitrace/subject/: __init__.py  measure.py  normalizer.py
src/cognitrace/temporal/: __init__.py  measure.py  resolver.py
tests/: test_adversarial.py  test_answer.py  test_harness.py  test_retrieval.py  test_store.py  test_subject.py  test_temporal.py  test_temporal_measure.py
