[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitrace"
version = "0.1.0"
description = "CogniTrace — encoder-driven conversational memory, benchmarked on LongMemEval and LoCoMo"
readme = "README.md"
authors = [{ name = "Kanishk Singh" }]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "httpx>=0.27",
]

# The memory system itself (Phase 1+) will vendor the CogniKernel spine
# (storage / retrieval / delta / compression); the harness deliberately has no
# dependency on it so baselines and scoring stay system-neutral.
[project.optional-dependencies]
embedding = ["fastembed>=0.3", "numpy>=1.24"]
# Cross-family judging (claude-* judge models) — the hardened protocol lane.
judge-anthropic = ["anthropic>=0.34"]

[project.scripts]
cognitrace = "cognitrace.harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cognitrace"]

[dependency-groups]
dev = ["pytest>=8.0", "hypothesis>=6.100"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
